Fixed an issue where the category slider was stuck on the left side on desktop

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -7,10 +7,10 @@
   margin-top: 4rem;
 }
 
-
 .slider-container {
   display: block;
   white-space: nowrap;
+  margin: 0 auto;
 }
 
 .categories {
@@ -20,7 +20,6 @@
   text-align: center;
   font-size: 2.2rem;
   font-weight: bold;
-
 
   &::-webkit-scrollbar {
     display: none;
